# chilean-real-state-full-pipeline

./: .env-example  .gitignore  README.md  pyproject.toml
src/: components.py  main.py  models.py
src/brz_to_slv/: main.py
src/chilean_real_state_offer_extraction_pipeline/: components.py  main.py
src/chilean_real_state_offer_extraction_pipeline/brz_to_slv/: main.py
src/chilean_real_state_offer_extraction_pipeline/src_to_brz/: main.py
src/src_to_brz/: src_to_brz.py
tests/: test_brz_to_slv.py  test_main.py  test_src_to_brz.py
tests/resources/detailed_offers/: test_answers_template.json
tests/resources/detailed_offers/page1/: page_content.html  page_url.txt  test_answers.json
tests/resources/detailed_offers/page2/: page_content.html  page_url.txt  test_answers.json
tests/resources/detailed_offers/page3/: page_content.html  page_url.txt  test_answers.json
tests/resources/detailed_offers/page4/: page_content.html  page_url.txt  test_answers.json
tests/resources/detailed_offers/page5/: page_content.html  page_url.txt  test_answers.json
tests/resources/detailed_offers/page6/: notes.md  page_content.html  page_url.txt  test_answers.json
