[project]
name = "chile-full-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "bs4>=0.0.2",
    "delta-spark>=4.1.0",
    "deltalake>=1.5.0",
    "dotenv>=0.9.9",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "scrapy>=2.14.2",
]
